Update tagline in index.html to reflect band description

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <div class="header-content">
             <h1 class="logo">DANDYSHOES</h1>
-            <p class="tagline">L'électricité du rock, l'élégance du style</p>
+            <p class="tagline">Bloody Rock'n'Roll Band from Charleroi,BE.</p>
             <a href="#music" class="cta-button">Découvrir "Thunder"</a>
         </div>
     </header>
