Add new band images and update member section in index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <path d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z"/>
                             </svg>
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="https://music.imusician.pro/a/5miFIQ7_?fbclid=IwY2xjawJyJUdleHRuA2FlbQIxMAABHszA7gLVSagU3n8CWAPr5tE_13lNkN65fQkQNTvM-7hDYDqgJeM5GAlNuIav_aem_10EoVZlzsnuJgxBBjubyDw" target="_blank">
                             <svg viewBox="0 0 24 24">
                                 <path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0zm0 19.104c-3.924 0-7.104-3.18-7.104-7.104S8.076 4.896 12 4.896s7.104 3.18 7.104 7.104-3.18 7.104-7.104 7.104zm0-13.332c-3.432 0-6.228 2.796-6.228 6.228S8.568 18.228 12 18.228s6.228-2.796 6.228-6.228S15.432 5.772 12 5.772zm3.024 6.228c0 1.668-1.356 3.024-3.024 3.024S8.976 13.668 8.976 12 10.332 8.976 12 8.976s3.024 1.356 3.024 3.024zm-1.284 0c0-.96-.78-1.74-1.74-1.74s-1.74.78-1.74 1.74.78 1.74 1.74 1.74 1.74-.78 1.74-1.74z"/>
                             </svg>
@@ -153,28 +153,40 @@
 
                      <p><strong>DANDY SHOES</strong> is a belgian Rock band consisting of Allan Berger (guitar & vocals), Romain Dumoulin (drums), Antoine Chauvaux (bass) and Arnaud Lietor Torres (guitar). Each with a distinct musical universe, the result gives a mixture of influences in a burst of shades such as , , , ... and many others. </p>
 
-                    <p> "The dandy must aspire to be sublime without interruption" Baudelaire. </p>
+                     <p> "The dandy must aspire to be sublime without interruption" Baudelaire. </p>
 
-                    <p>After a price at the contest "l'Envol des Cités", the group records their first LP "" with Roland De Greef () under Moonzoo Music label. Coming out in 2014, the record travels through vintage music with a modern touch.</p>
+                     <p>After a price at the contest "l'Envol des Cités", the group records their first LP "" with Roland De Greef () under Moonzoo Music label. Coming out in 2014, the record travels through vintage music with a modern touch.</p>
 
-                    <p> With the arrival of "" the second album released in early 2019, the pop side fades away... It gives way to a more assertive and liberating Blues Rock. More natural and fulfilling for them. Still in this quest for Rock'n'Roll.</p>
+                     <p> With the arrival of "" the second album released in early 2019, the pop side fades away... It gives way to a more assertive and liberating Blues Rock. More natural and fulfilling for them. Still in this quest for Rock'n'Roll.</p>
                     
-                    <p> Pure energy, frenzied game scenes, "dandystic" attitude... This is what to expect from DANDY SHOES !</p>
+                     <p> Pure energy, frenzied game scenes, "dandystic" attitude... This is what to expect from DANDY SHOES !</p>
                     
                     <div class="glass-card" style="margin-top: 2rem;">
                         <h4 style="color: var(--primary); margin-bottom: 1rem;">Le Groupe</h4>
                         <ul style="list-style: none; padding: 0;">
-                            <li style="margin-bottom: 0.8rem;">
-                                <strong style="color: var(--primary);">Alex</strong> - Voix, Guitare
+                            <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
+                                <img src="img/members/alex.jpg" alt="Alex" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <div>
+                                    <strong style="color: var(--primary);">Alex</strong> - Voix, Guitare
+                                </div>
                             </li>
-                            <li style="margin-bottom: 0.8rem;">
-                                <strong style="color: var(--primary);">Marie</strong> - Basse, Chœurs
+                            <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
+                                <img src="img/members/marie.jpg" alt="Marie" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <div>
+                                    <strong style="color: var(--primary);">Marie</strong> - Basse, Chœurs
+                                </div>
                             </li>
-                            <li style="margin-bottom: 0.8rem;">
-                                <strong style="color: var(--primary);">Thomas</strong> - Batterie
+                            <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
+                                <img src="img/members/thomas.jpg" alt="Thomas" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <div>
+                                    <strong style="color: var(--primary);">Thomas</strong> - Batterie
+                                </div>
                             </li>
-                            <li style="margin-bottom: 0.8rem;">
-                                <strong style="color: var(--primary);">Jules</strong> - Guitare, Synthés
+                            <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
+                                <img src="img/members/jules.jpg" alt="Jules" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <div>
+                                    <strong style="color: var(--primary);">Jules</strong> - Guitare, Synthés
+                                </div>
                             </li>
                         </ul>
                     </div>
