Add new images for band members and update member section in index.html

--- a/index.html
+++ b/index.html
@@ -147,9 +147,7 @@
                 </div>
                 
                 <div class="about-text">
-                   
-
-                     <p>Bloody Rock'n'roll from Charleroi, BE. Fed by bands stamped with a "Black" that set the tone, DANDY SHOES is a vintage spirit formation where dirty fuzz collides with muddy and verby sounds. </p>
+                    <p>Bloody Rock'n'roll from Charleroi, BE. Fed by bands stamped with a "Black" that set the tone, DANDY SHOES is a vintage spirit formation where dirty fuzz collides with muddy and verby sounds. </p>
 
                      <p><strong>DANDY SHOES</strong> is a belgian Rock band consisting of Allan Berger (guitar & vocals), Romain Dumoulin (drums), Antoine Chauvaux (bass) and Arnaud Lietor Torres (guitar). Each with a distinct musical universe, the result gives a mixture of influences in a burst of shades such as , , , ... and many others. </p>
 
@@ -165,27 +163,27 @@
                         <h4 style="color: var(--primary); margin-bottom: 1rem;">Le Groupe</h4>
                         <ul style="list-style: none; padding: 0;">
                             <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/members/alex.jpg" alt="Alex" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <img src="img/members/allan.jpg" alt="Allan" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
                                 <div>
-                                    <strong style="color: var(--primary);">Alex</strong> - Voix, Guitare
+                                    <strong style="color: var(--primary);">Allan</strong> - Voix, Guitare
                                 </div>
                             </li>
                             <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/members/marie.jpg" alt="Marie" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <img src="img/members/antoine.jpg" alt="Antoine" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
                                 <div>
-                                    <strong style="color: var(--primary);">Marie</strong> - Basse, Chœurs
+                                    <strong style="color: var(--primary);">Antoine</strong> - Basse
                                 </div>
                             </li>
                             <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/members/thomas.jpg" alt="Thomas" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <img src="img/members/romain.jpg" alt="Romain" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
                                 <div>
-                                    <strong style="color: var(--primary);">Thomas</strong> - Batterie
+                                    <strong style="color: var(--primary);">Romain</strong> - Batterie
                                 </div>
                             </li>
                             <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/members/jules.jpg" alt="Jules" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <img src="img/members/arnaud.jpg" alt="Arnaud" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
                                 <div>
-                                    <strong style="color: var(--primary);">Jules</strong> - Guitare, Synthés
+                                    <strong style="color: var(--primary);">Arnaud</strong> - Guitare
                                 </div>
                             </li>
                         </ul>
