Add note to ensure Microgramma-D-Extended-Bold font file is in the correct folder

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DANDYSHOES | Rock Band Official</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <!-- Assurez-vous que le fichier Microgramma-D-Extended-Bold.otf est placé dans le dossier "font" -->
 </head>
 <body>
     <nav class="navbar">
