--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             
             <div class="latest-release">
                 <div class="release-art animated-border hover-3d">
-                    <img src="img/thunder-cover.jpg" alt="Album Thunder par Dandyshoes">
+                    <video width="100%" controls autoplay muted loop>
+                        <source src="thunder-video.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture de vidéos HTML5.
+                    </video>
                 </div>
                 
                 <div class="release-info">
