--- a/index.html
+++ b/index.html
@@ -167,25 +167,25 @@
                         <h4 style="color: var(--primary); margin-bottom: 1rem;">Le Groupe</h4>
                         <ul style="list-style: none; padding: 0;">
                             <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/members/allan.jpg" alt="Allan" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <img src="img/allan3.jpg" alt="Allan" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
                                 <div>
                                     <strong style="color: var(--primary);">Allan</strong> - Voix, Guitare
                                 </div>
                             </li>
                             <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/members/antoine.jpg" alt="Antoine" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <img src="img/antoine.jpg" alt="Antoine" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
                                 <div>
                                     <strong style="color: var(--primary);">Antoine</strong> - Basse
                                 </div>
                             </li>
                             <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/members/romain.jpg" alt="Romain" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <img src="img/romain2.jpg" alt="Romain" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
                                 <div>
                                     <strong style="color: var(--primary);">Romain</strong> - Batterie
                                 </div>
                             </li>
                             <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/members/arnaud.jpg" alt="Arnaud" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                                <img src="img/arnaud.jpg" alt="Arnaud" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
                                 <div>
                                     <strong style="color: var(--primary);">Arnaud</strong> - Guitare
                                 </div>
