--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="latest-release">
                 <div class="release-art animated-border hover-3d">
                     <video width="100%" controls autoplay muted loop>
-                        <source src="thundervideo.mp4" type="video/mp4">
+                        <source src="videos/thundervideo.mp4" type="video/mp4">
                         Votre navigateur ne supporte pas la lecture de vidéos HTML5.
                     </video>
                 </div>
