--- a/index.html
+++ b/index.html
@@ -471,16 +471,16 @@
                     <img src="img/gallery-2.jpg" alt="Dandyshoes backstage">
                 </div>
                 <div class="gallery-item animated-border">
-                    <img src="img/gallery-3.jpg" alt="Dandyshoes en studio">
+                    <img src="img/romain.jpg" alt="Dandyshoes en studio">
                 </div>
                 <div class="gallery-item animated-border">
-                    <img src="img/gallery-4.jpg" alt="Dandyshoes avec des fans">
+                    <img src="img/arnaud.jpg" alt="Dandyshoes avec des fans">
                 </div>
                 <div class="gallery-item animated-border">
-                    <img src="img/gallery-5.jpg" alt="Tournée Dandyshoes">
+                    <img src="img/antoine.jpg" alt="Tournée Dandyshoes">
                 </div>
                 <div class="gallery-item animated-border">
-                    <img src="img/gallery-6.jpg" alt="Session acoustique Dandyshoes">
+                    <img src="img/allan.jpg" alt="Session acoustique Dandyshoes">
                 </div>
             </div>
         </div>
