--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             
             <div class="about-content">
                 <div class="about-image neomorph">
-                    <img src="img/band-photo.jpg" alt="Dandyshoes groupe">
+                    <img src="img/DandyShoesBand.jpg" alt="Dandyshoes groupe">
                 </div>
                 
                 <div class="about-text">
@@ -376,26 +376,26 @@
                     <div class="glass-card" style="margin-top: 2rem;">
                         <h4 style="color: var(--primary); margin-bottom: 1rem;">Le Groupe</h4>
                         <ul style="list-style: none; padding: 0;">
-                            <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/allan3.jpg" alt="Allan" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                            <li style="margin-bottom: 1.2rem; display: flex; align-items: center;">
+                                <img src="img/allan3.jpg" alt="Allan" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; margin-right: 15px; border: 2px solid var(--primary);">
                                 <div>
                                     <strong style="color: var(--primary);">Allan</strong> - Voix, Guitare
                                 </div>
                             </li>
-                            <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/antoine.jpg" alt="Antoine" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                            <li style="margin-bottom: 1.2rem; display: flex; align-items: center;">
+                                <img src="img/antoine.jpg" alt="Antoine" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; margin-right: 15px; border: 2px solid var(--primary);">
                                 <div>
                                     <strong style="color: var(--primary);">Antoine</strong> - Basse
                                 </div>
                             </li>
-                            <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/romain2.jpg" alt="Romain" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                            <li style="margin-bottom: 1.2rem; display: flex; align-items: center;">
+                                <img src="img/romain2.jpg" alt="Romain" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; margin-right: 15px; border: 2px solid var(--primary);">
                                 <div>
                                     <strong style="color: var(--primary);">Romain</strong> - Batterie
                                 </div>
                             </li>
-                            <li style="margin-bottom: 0.8rem; display: flex; align-items: center;">
-                                <img src="img/arnaud.jpg" alt="Arnaud" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; border: 2px solid var(--primary);">
+                            <li style="margin-bottom: 1.2rem; display: flex; align-items: center;">
+                                <img src="img/arnaud.jpg" alt="Arnaud" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; margin-right: 15px; border: 2px solid var(--primary);">
                                 <div>
                                     <strong style="color: var(--primary);">Arnaud</strong> - Guitare
                                 </div>
