--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         
         <div class="header-content">
             <h1 class="logo">DANDYSHOES</h1>
-            <p class="tagline">Bloody Rock'n'Roll Band from Charleroi,BE.</p>
+            <p class="tagline">BLOODY R'n'R BAND FROM CHARLEROI, BE.</p>
             <a href="#music" class="cta-button">Découvrir "Thunder"</a>
         </div>
     </header>
