Update platform logos to include links and change coming soon image

--- a/index.html
+++ b/index.html
@@ -246,22 +246,24 @@
                 <div class="platforms-scroll">
                     <div class="platforms-track">
                         <!-- Logos des radios et plateformes -->
-                        <div class="platform-logo"><img src="https://upload.wikimedia.org/wikipedia/fr/thumb/a/a0/Classic_21_logo.svg/200px-Classic_21_logo.svg.png" alt="Classic 21"></div>
-                        <div class="platform-logo"><img src="https://www.nostalgie.be/images/nostalgie-logo-black.svg" alt="Nostalgie"></div>
-                        <div class="platform-logo"><img src="https://www.rtbf.be/commons/images/logos/vivacite.svg" alt="Vivacité"></div>
-                        <div class="platform-logo"><img src="https://www.rtbf.be/commons/images/logos/la-deux-negative.svg" alt="La Deux"></div>
-                        <div class="platform-logo"><img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Green.png" alt="Spotify"></div>
-                        <div class="platform-logo"><img src="https://www.deezer.com/assets/images/logos/deezer.svg" alt="Deezer"></div>
-                        <div class="platform-logo"><img src="https://www.apple.com/v/apple-music/s/images/overview/icon_apple_music__fiemgyq6ehya_large_2x.png" alt="Apple Music"></div>
-                        <div class="platform-logo"><img src="https://www.gstatic.com/youtube/img/branding/youtubemusic/yt_music_primary_logo.svg" alt="YouTube Music"></div>
-                        <div class="platform-logo"><img src="https://www.awa.fm/images/awa-icon.svg" alt="AWA"></div>
+                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="https://upload.wikimedia.org/wikipedia/fr/thumb/a/a0/Classic_21_logo.svg/200px-Classic_21_logo.svg.png" alt="Classic 21"></a>
+                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="https://www.nostalgie.be/images/nostalgie-logo-black.svg" alt="Nostalgie"></a>
+                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="https://www.rtbf.be/commons/images/logos/vivacite.svg" alt="Vivacité"></a>
+                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="https://www.rtbf.be/commons/images/logos/la-deux-negative.svg" alt="La Deux"></a>
+                        <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Green.png" alt="Spotify"></a>
+                        <a href="https://www.deezer.com/fr/artist/8785458" target="_blank" class="platform-logo"><img src="https://www.deezer.com/assets/images/logos/deezer.svg" alt="Deezer"></a>
+                        <a href="https://music.apple.com/fr/artist/dandy-shoes/1457452619" target="_blank" class="platform-logo"><img src="https://www.apple.com/v/apple-music/s/images/overview/icon_apple_music__fiemgyq6ehya_large_2x.png" alt="Apple Music"></a>
+                        <a href="https://music.youtube.com/search?q=dandyshoes" target="_blank" class="platform-logo"><img src="https://www.gstatic.com/youtube/img/branding/youtubemusic/yt_music_primary_logo.svg" alt="YouTube Music"></a>
+                        <a href="https://awa.fm/" target="_blank" class="platform-logo"><img src="https://www.awa.fm/images/awa-icon.svg" alt="AWA"></a>
+                        <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="https://m.media-amazon.com/images/G/01/digital/music/merch/2020/LandingPages/ACQ/Amazon_Music_Logo._CB428578411_.png" alt="Amazon Music"></a>
                         
                         <!-- Répétition pour créer un effet continu -->
-                        <div class="platform-logo"><img src="https://upload.wikimedia.org/wikipedia/fr/thumb/a/a0/Classic_21_logo.svg/200px-Classic_21_logo.svg.png" alt="Classic 21"></div>
-                        <div class="platform-logo"><img src="https://www.nostalgie.be/images/nostalgie-logo-black.svg" alt="Nostalgie"></div>
-                        <div class="platform-logo"><img src="https://www.rtbf.be/commons/images/logos/vivacite.svg" alt="Vivacité"></div>
-                        <div class="platform-logo"><img src="https://www.rtbf.be/commons/images/logos/la-deux-negative.svg" alt="La Deux"></div>
-                        <div class="platform-logo"><img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Green.png" alt="Spotify"></div>
+                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="https://upload.wikimedia.org/wikipedia/fr/thumb/a/a0/Classic_21_logo.svg/200px-Classic_21_logo.svg.png" alt="Classic 21"></a>
+                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="https://www.nostalgie.be/images/nostalgie-logo-black.svg" alt="Nostalgie"></a>
+                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="https://www.rtbf.be/commons/images/logos/vivacite.svg" alt="Vivacité"></a>
+                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="https://www.rtbf.be/commons/images/logos/la-deux-negative.svg" alt="La Deux"></a>
+                        <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Green.png" alt="Spotify"></a>
+                        <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="https://m.media-amazon.com/images/G/01/digital/music/merch/2020/LandingPages/ACQ/Amazon_Music_Logo._CB428578411_.png" alt="Amazon Music"></a>
                     </div>
                 </div>
             </div>
@@ -322,7 +324,7 @@
                         </a>
                         <a href="https://music.imusician.pro/a/5miFIQ7_?fbclid=IwY2xjawJyJUdleHRuA2FlbQIxMAABHszA7gLVSagU3n8CWAPr5tE_13lNkN65fQkQNTvM-7hDYDqgJeM5GAlNuIav_aem_10EoVZlzsnuJgxBBjubyDw" target="_blank">
                             <svg viewBox="0 0 24 24">
-                                <path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0zm0 19.104c-3.924 0-7.104-3.18-7.104-7.104S8.076 4.896 12 4.896s7.104 3.18 7.104 7.104-3.18 7.104-7.104 7.104zm0-13.332c-3.432 0-6.228 2.796-6.228 6.228S8.568 18.228 12 18.228s6.228-2.796 6.228-6.228S15.432 5.772 12 5.772zm3.024 6.228c0 1.668-1.356 3.024-3.024 3.024S8.976 13.668 8.976 12 10.332 8.976 12 8.976s3.024 1.356 3.024 3.024zm-1.284 0c0-.96-.78-1.74-1.74-1.74s-1.74.78-1.74 1.74.78 1.74 1.74 1.74 1.74-.78 1.74-1.74z"/>
+                                <path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0zm0 19.104c-3.924 0-7.104-3.18-7.104-7.104S8.076 4.896 12 4.896s7.104 3.18 7.104 7.104-3.18 7.104-7.104 7.104zm0-13.332c-3.432 0-6.228 2.796-6.228 6.228S8.568 18.228 12 18.228s6.228-2.796 6.228-6.228-2.796-6.228-6.228-6.228zm3.024 6.228c0 1.668-1.356 3.024-3.024 3.024S8.976 13.668 8.976 12 10.332 8.976 12 8.976s3.024 1.356 3.024 3.024zm-1.284 0c0-.96-.78-1.74-1.74-1.74s-1.74.78-1.74 1.74.78 1.74 1.74 1.74 1.74-.78 1.74-1.74z"/>
                             </svg>
                         </a>
                         <a href="#" target="_blank">
@@ -349,7 +351,7 @@
                 <div class="gallery-grid">
                     <div class="glass-card coming-soon">
                         <div class="release-art" style="width: 100%; height: 200px; margin-bottom: 1rem; position: relative;">
-                            <img src="img/coming-soon.jpg" alt="Prochain album Dandyshoes" style="filter: brightness(0.7);">
+                            <img src="img/DandyShoesBand.jpg" alt="Prochain album Dandyshoes" style="filter: brightness(0.7);">
                             <div class="coming-soon-overlay">
                                 <span>AUTOMNE 2025</span>
                             </div>
