--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="https://upload.wikimedia.org/wikipedia/fr/thumb/a/a0/Classic_21_logo.svg/200px-Classic_21_logo.svg.png" alt="Classic 21"></a>
                         <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="https://www.nostalgie.be/images/nostalgie-logo-black.svg" alt="Nostalgie"></a>
                         <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="https://www.rtbf.be/commons/images/logos/vivacite.svg" alt="Vivacité"></a>
-                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="https://www.rtbf.be/commons/images/logos/la-deux-negative.svg" alt="La Deux"></a>
+                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="https://www.rtbf.be/article/dandy-shoes-en-session-acoustique-10207994" alt="La Deux"></a>
                         <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Green.png" alt="Spotify"></a>
                         <a href="https://www.deezer.com/fr/artist/8785458" target="_blank" class="platform-logo"><img src="https://www.deezer.com/assets/images/logos/deezer.svg" alt="Deezer"></a>
                         <a href="https://music.apple.com/fr/artist/dandy-shoes/1457452619" target="_blank" class="platform-logo"><img src="https://www.apple.com/v/apple-music/s/images/overview/icon_apple_music__fiemgyq6ehya_large_2x.png" alt="Apple Music"></a>
