--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         
         <div class="header-content">
             <h1 class="logo">DANDYSHOES</h1>
-            <p class="tagline">BLOODY R'n'R BAND FROM CHARLEROI, BE.</p>
+            <p class="tagline">BLOODY R'n'R BAND FROM CHARLEROI, 🇧🇪.</p>
             <a href="#music" class="cta-button">Découvrir "Thunder"</a>
             
             <!-- Ajout de la section des plateformes -->
