--- a/index.html
+++ b/index.html
@@ -255,24 +255,24 @@
                 <div class="platforms-scroll">
                     <div class="platforms-track">
                         <!-- Logos des radios et plateformes -->
-                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21-logo.png" alt="Classic 21"></a>
-                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie-logo.png" alt="Nostalgie"></a>
-                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite-logo.png" alt="Vivacité"></a>
-                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik-logo.png" alt="Tipik"></a>
+                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21"></a>
+                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie"></a>
+                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacité.png" alt="Vivacité"></a>
+                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik.png" alt="Tipik"></a>
                         <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="img/spotify-logo.png" alt="Spotify"></a>
-                        <a href="https://www.deezer.com/fr/artist/8785458" target="_blank" class="platform-logo"><img src="img/deezer-logo.png" alt="Deezer"></a>
-                        <a href="https://music.apple.com/fr/artist/dandy-shoes/1457452619" target="_blank" class="platform-logo"><img src="img/applemusic-logo.png" alt="Apple Music"></a>
-                        <a href="https://music.youtube.com/search?q=dandyshoes" target="_blank" class="platform-logo"><img src="img/youtubemusic-logo.png" alt="YouTube Music"></a>
-                        <a href="https://awa.fm/" target="_blank" class="platform-logo"><img src="img/awa-logo.png" alt="AWA"></a>
-                        <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="img/amazonmusic-logo.png" alt="Amazon Music"></a>
+                        <a href="https://www.deezer.com/fr/artist/8785458" target="_blank" class="platform-logo"><img src="img/deezer.png" alt="Deezer"></a>
+                        <a href="https://music.apple.com/fr/artist/dandy-shoes/1457452619" target="_blank" class="platform-logo"><img src="img/applemusique.png" alt="Apple Music"></a>
+                        <a href="https://music.youtube.com/search?q=dandyshoes" target="_blank" class="platform-logo"><img src="img/youtube.png" alt="YouTube Music"></a>
+                        <a href="https://awa.fm/" target="_blank" class="platform-logo"><img src="img/awa.png" alt="AWA"></a>
+                        <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="img/amazonmusique.png" alt="Amazon Music"></a>
                         
                         <!-- Répétition pour créer un effet continu -->
-                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21-logo.png" alt="Classic 21"></a>
-                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie-logo.png" alt="Nostalgie"></a>
-                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite-logo.png" alt="Vivacité"></a>
-                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik-logo.png" alt="Tipik"></a>
+                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21"></a>
+                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie"></a>
+                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacité.png" alt="Vivacité"></a>
+                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik.png" alt="Tipik"></a>
                         <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="img/spotify-logo.png" alt="Spotify"></a>
-                        <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="img/amazonmusic-logo.png" alt="Amazon Music"></a>
+                        <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="img/amazonmusique.png" alt="Amazon Music"></a>
                     </div>
                 </div>
             </div>
@@ -364,7 +364,6 @@
                             <div class="coming-soon-overlay">
                                 <span>AUTOMNE 2025</span>
                             </div>
-                        </div>
                         </div>
                         <h4 style="color: var(--primary); margin-bottom: 0.5rem;">Nouvel EP</h4>
                         <p style="opacity: 0.7; font-size: 0.9rem; color: #ff3c3c;">À venir • 2025</p>
